--- a/applyjobs/src/main/res/layout/fragment_job_detail.xml
+++ b/applyjobs/src/main/res/layout/fragment_job_detail.xml
@@ -137,7 +137,7 @@
                     android:gravity="center_vertical"
                     android:paddingLeft="@dimen/space_5"
                     android:textColor="@color/main_color"
-                    android:textSize="@dimen/text_small"
+                    android:textSize="@dimen/font_size_14"
                     />
             </LinearLayout>
 
