--- a/common/src/main/res/layout/actionbar.xml
+++ b/common/src/main/res/layout/actionbar.xml
@@ -24,7 +24,7 @@
         android:scaleType="fitCenter"
         android:background="@drawable/topbar_btn_bg"
         android:visibility="invisible"
-        android:padding="10dip"/>
+        android:padding="@dimen/padding_small"/>
 
     <LinearLayout
         android:layout_width="match_parent"
