修改蓝领样式与BUG

--- a/bluecollar/src/main/res/drawable/bg_welfare.xml
+++ b/bluecollar/src/main/res/drawable/bg_welfare.xml
@@ -3,6 +3,11 @@
     <corners
         android:radius="2dip"
         />
+
+    <gradient
+        android:startColor="#00000000"
+        android:endColor="#00000000"
+        />
     <stroke
         android:color="#6bbd00"
         android:width="1px"
