--- a/common/src/main/res/values/dimens.xml
+++ b/common/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="text_small">12sp</dimen>
     <!--  超小号字 -->
     <dimen name="text_litter">10sp</dimen>
+    <dimen name="text_litter_small">8sp</dimen>
     <!--  大号字 -->
     <dimen name="text_large">18sp</dimen>
 
