--- a/bluecollar/src/main/res/layout/item_bluejob.xml
+++ b/bluecollar/src/main/res/layout/item_bluejob.xml
@@ -46,9 +46,9 @@
 
                 <TextView
                     android:id="@+id/item_title"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dip"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="2.5"
                     android:ellipsize="end"
                     android:gravity="center_vertical"
                     android:singleLine="true"
@@ -58,11 +58,12 @@
 
                 <TextView
                     android:id="@+id/item_dis"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dip"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="30dip"
-                    android:layout_weight="2"
+                    android:layout_marginLeft="@dimen/padding_small"
+                    android:layout_weight="1"
                     android:gravity="center_vertical|left"
+                    android:text="多岁的发生"
                     android:textColor="@color/light_color"
                     android:textSize="@dimen/font_size_12"/>
 
@@ -83,7 +84,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:minWidth="100dip"
+                    android:minWidth="90dip"
                     android:singleLine="true"
                     android:textColor="@color/bule_low_color"
                     android:textSize="@dimen/text_small"/>
@@ -107,42 +108,56 @@
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/item_company_name"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:layout_width="0dip"
                     android:layout_height="match_parent"
-                    android:ellipsize="end"
-                    android:maxWidth="200dip"
-                    android:gravity="center_vertical"
-                    android:singleLine="true"
-                    android:textColor="@color/light_color"
-                    android:textSize="@dimen/text_small"/>
+                    android:layout_weight="2.5"
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/item_certify"
-                    android:layout_width="20dip"
-                    android:layout_height="15dip"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/padding_small"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/icon_uncertify"/>
+                    <TextView
+                        android:id="@+id/item_company_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="45dip"
+                        android:ellipsize="end"
+                        android:gravity="center_vertical"
+                        android:singleLine="true"
+                        android:text="水电费水电费水电费水电费第三方水电费水电费"
+                        android:textColor="@color/light_color"
+                        android:textSize="@dimen/text_small"/>
 
-                <ImageView
-                    android:id="@+id/item_vip"
-                    android:layout_width="15dip"
-                    android:layout_height="15dip"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/padding_small"
-                    android:scaleType="fitXY"
-                    android:src="@mipmap/icon_vip"/>
+                    <ImageView
+                        android:id="@+id/item_certify"
+                        android:layout_width="20dip"
+                        android:layout_height="15dip"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginRight="@dimen/padding_small"
+                        android:layout_toLeftOf="@id/item_vip"
+                        android:scaleType="fitXY"
+                        android:src="@mipmap/icon_uncertify"/>
+
+                    <ImageView
+                        android:id="@+id/item_vip"
+                        android:layout_width="15dip"
+                        android:layout_height="15dip"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center_vertical"
+                        android:scaleType="fitXY"
+                        android:src="@mipmap/icon_vip"/>
+                </RelativeLayout>
 
                 <TextView
                     android:id="@+id/item_time"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dip"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/padding_small"
+                    android:layout_weight="1"
                     android:ellipsize="end"
-                    android:gravity="right|center_vertical"
+                    android:gravity="left|center_vertical"
                     android:singleLine="true"
+                    android:text="2016-12-12"
                     android:textColor="@color/light_color"
                     android:textSize="@dimen/text_small"/>
 
