--- a/bluecollar/src/main/res/layout/fragment_blue_info_center.xml
+++ b/bluecollar/src/main/res/layout/fragment_blue_info_center.xml
@@ -245,7 +245,7 @@
                     listitem:image="@drawable/personal_center_setting"
                     listitem:showHLine="false"
                     listitem:showLine="false"
-                    listitem:tvtitle="设置" />
+                    listitem:tvtitle="修改登录信息" />
 
                 <View style="@style/line" />
             </LinearLayout>
