--- a/common/src/main/res/layout/topbar.xml
+++ b/common/src/main/res/layout/topbar.xml
@@ -8,64 +8,63 @@
         android:id="@+id/btn_left"
         android:layout_width="110dip"
         android:layout_height="match_parent"
-        android:src="@drawable/logo_white"
-        android:scaleType="fitCenter"
         android:background="@drawable/topbar_btn_bg"
+        android:paddingBottom="@dimen/padding_small"
         android:paddingTop="@dimen/padding_small"
-        android:paddingBottom="@dimen/padding_small"/>
+        android:scaleType="fitCenter"
+        android:src="@drawable/logo_white" />
 
     <ImageButton
         android:id="@+id/btn_right"
         android:layout_width="@dimen/topbar_height"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
-        android:src="@drawable/icon_list"
-        android:scaleType="fitCenter"
-        android:onClick="toSetting"
         android:background="@drawable/topbar_btn_bg"
-        android:padding="13dip"/>
+        android:onClick="toSetting"
+        android:padding="13dip"
+        android:scaleType="fitCenter"
+        android:src="@drawable/icon_list" />
 
     <TextView
+        android:id="@+id/top_title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_toRightOf="@id/btn_left"
-        android:text="标题"
-        android:id="@+id/top_title"
-        android:textColor="@color/white"
         android:gravity="center_vertical"
         android:singleLine="true"
+        android:text="标题"
+        android:textColor="@color/white"
         android:textSize="@dimen/text_default"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:clickable="true"
+        android:layout_toLeftOf="@id/btn_right"
         android:background="@drawable/topbar_btn_bg"
-        android:padding="@dimen/padding_small"
-        android:layout_toLeftOf="@id/btn_right">
+        android:clickable="true"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_small">
+
         <TextView
+            android:id="@+id/tv_city"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_toLeftOf="@id/btn_right"
-            android:text="合肥"
-            android:id="@+id/tv_city"
-            android:textColor="@color/white"
             android:gravity="center_vertical"
             android:singleLine="true"
-            android:textSize="@dimen/text_small"/>
+            android:text="合肥"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_small" />
 
         <ImageView
             android:layout_width="18dip"
             android:layout_height="18dip"
             android:layout_marginLeft="5dip"
-            android:src="@drawable/icon_map"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:src="@drawable/icon_map" />
     </LinearLayout>
-
-
 
 
 </RelativeLayout>
