--- a/common/src/main/res/layout/activity_good_jobs_setting.xml
+++ b/common/src/main/res/layout/activity_good_jobs_setting.xml
@@ -1,27 +1,98 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:listitem="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color">
+    android:background="@color/bg_color"
+    android:orientation="vertical">
 
-    <include layout="@layout/actionbar"/>
+    <include layout="@layout/actionbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginTop="@dimen/padding_small"
         android:background="@color/white"
-        android:layout_marginTop="@dimen/padding_small">
-        <View style="@style/line"/>
+        android:orientation="vertical">
+
+        <View style="@style/line" />
+
         <cn.goodjobs.common.view.searchItem.SearchItemView
             android:id="@+id/itemModule"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            listitem:tvtitle="默认模块"
             listitem:hint="点击选择默认模块"
-            listitem:showLine="false"/>
-        <View style="@style/line"/>
+            listitem:showHLine="false"
+            listitem:showLine="false"
+            listitem:tvtitle="返回引导页" />
+
+        <View style="@style/line" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_small"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <View style="@style/line" />
+
+        <cn.goodjobs.common.view.searchItem.SearchItemView
+            android:id="@+id/itemFeedBack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            listitem:showHLine="false"
+            listitem:tvtitle="意见反馈" />
+
+        <cn.goodjobs.common.view.searchItem.SearchItemView
+            android:id="@+id/itemClear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            listitem:showHLine="false"
+            listitem:showLine="false"
+            listitem:tvtitle="清除缓存" />
+
+        <View style="@style/line" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding_small"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <View style="@style/line" />
+
+        <cn.goodjobs.common.view.searchItem.SearchItemView
+            android:id="@+id/itemCheck"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            listitem:showHLine="false"
+            listitem:tvtitle="检查更新" />
+
+        <cn.goodjobs.common.view.searchItem.SearchItemView
+            android:id="@+id/itemHelp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            listitem:showHLine="false"
+            listitem:tvtitle="帮助" />
+
+        <cn.goodjobs.common.view.searchItem.SearchItemView
+            android:id="@+id/itemAbout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            listitem:showHLine="false"
+            listitem:showLine="false"
+            listitem:tvtitle="关于" />
+
+        <View style="@style/line" />
     </LinearLayout>
 
 </LinearLayout>
