--- a/bluecollar/src/main/res/layout/item_b_top_nav_layout.xml
+++ b/bluecollar/src/main/res/layout/item_b_top_nav_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="41dip"
-              android:background="@drawable/lottery_list_selector_disabled_holo_light"
+              android:background="#22000000"
               android:orientation="vertical"
     >
 
