--- a/bluecollar/src/main/res/layout/activity_jobcate.xml
+++ b/bluecollar/src/main/res/layout/activity_jobcate.xml
@@ -37,7 +37,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_margin="@dimen/space_5"
-            android:background="@drawable/boxborder_bule"
+            android:background="@mipmap/bg_blue_box"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             >
@@ -76,12 +76,12 @@
             android:layout_weight="2.5"
             android:fadingEdge="none"
             android:scrollbars="none"
-            >
+            android:fillViewport="false">
 
             <LinearLayout
                 android:id="@+id/tools"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 />
