--- a/common/src/main/res/drawable/bright_bg.xml
+++ b/common/src/main/res/drawable/bright_bg.xml
@@ -4,4 +4,7 @@
         android:width="1px"
         android:color="@color/line_color"
         ></stroke>
+    <solid
+        android:color="#ffffff"
+        />
 </shape>
