--- a/common/src/main/res/drawable/choose_first_level_item_selector.xml
+++ b/common/src/main/res/drawable/choose_first_level_item_selector.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/window_background" android:state_pressed="true"/>
-    <item android:drawable="@color/white"/>
+    <item android:state_pressed="true">
+        <shape
+            >
+            <solid
+                android:color="@color/window_background"
+                />
+        </shape>
+    </item>
+    <item>
+        <shape
+            >
+            <solid
+                android:color="@color/white"
+                />
+        </shape>
+    </item>
 </selector>
