--- a/common/src/main/res/drawable/item_labelview.xml
+++ b/common/src/main/res/drawable/item_labelview.xml
@@ -9,5 +9,6 @@
         android:left="@dimen/padding_small"
         android:right="@dimen/padding_small"
         android:top="@dimen/padding_small" />
+    <solid android:color="@color/white" />
 
 </shape>
