--- a/bluecollar/src/main/res/layout/activity_resume.xml
+++ b/bluecollar/src/main/res/layout/activity_resume.xml
@@ -2,10 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/tools"
     xmlns:listitem="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll_top"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_color"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="invisible">
 
     <include layout="@layout/actionbar" />
 
