--- a/applyjobs/src/main/res/layout/activity_jobcompany_detail.xml
+++ b/applyjobs/src/main/res/layout/activity_jobcompany_detail.xml
@@ -217,6 +217,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:drawableRight="@drawable/r_icon"
                         android:gravity="center_vertical"
                         android:text="招聘职位"
                         android:textColor="@color/bule_low_color"
@@ -285,7 +286,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/space_10"
                         android:maxLines="5"
-                        android:textColor="@color/light_color"
+                        android:lineSpacingMultiplier="1.3"
+                        android:textColor="@color/main_color"
                         android:textSize="@dimen/text_small"></TextView>
 
                     <ImageView
