--- a/applyjobs/src/main/res/layout/activity_searchname_jobs.xml
+++ b/applyjobs/src/main/res/layout/activity_searchname_jobs.xml
@@ -49,7 +49,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/topbar_bg"/>
+        android:background="@color/line_color"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
