--- a/bluecollar/src/main/res/layout/activity_bluejobcompany_detail.xml
+++ b/bluecollar/src/main/res/layout/activity_bluejobcompany_detail.xml
@@ -68,13 +68,13 @@
 
                         <TextView
                             android:id="@+id/com_status"
-                            android:layout_marginLeft="@dimen/padding_small"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:textColor="#5ab94b"
+                            android:layout_marginLeft="@dimen/padding_small"
                             android:drawableLeft="@mipmap/icon_uncertify"
                             android:gravity="center_vertical"
                             android:text=" 营业执照已验证"
+                            android:textColor="#5ab94b"
                             android:textSize="@dimen/text_litter_small"
                             />
 
@@ -239,8 +239,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/space_10"
+                        android:lineSpacingMultiplier="1.3"
                         android:maxLines="5"
-                        android:textColor="@color/light_color"
+                        android:textColor="@color/main_color"
                         android:textSize="@dimen/text_small"></TextView>
 
                     <ImageView
