--- a/bluecollar/src/main/res/layout/fragment_bluejob_detail.xml
+++ b/bluecollar/src/main/res/layout/fragment_bluejob_detail.xml
@@ -94,10 +94,13 @@
 
 
                 <LinearLayout
+                    android:id="@+id/job_cro_box"
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
                     android:layout_marginTop="@dimen/space_10"
                     android:layout_weight="1"
+                    android:background="@drawable/list_item_bg"
+                    android:clickable="true"
                     android:orientation="horizontal">
 
                     <LinearLayout
@@ -110,7 +113,6 @@
                             android:id="@+id/job_cro"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:background="@drawable/list_item_bg"
                             android:gravity="center_vertical"
                             android:paddingLeft="@dimen/space_5"
                             android:textColor="@color/light_color"
@@ -282,7 +284,7 @@
                     android:text="相关福利"
                     android:textColor="@color/bule_low_color"
                     android:textSize="@dimen/font_size_14"
-                    android:textStyle="bold"/>
+                    />
 
 
                 <cn.goodjobs.common.view.XCFlowLayout
@@ -321,7 +323,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/padding_small"
-                    android:textColor="@color/light_color"
+                    android:lineSpacingMultiplier="1.3"
+                    android:textColor="@color/main_color"
                     android:textSize="@dimen/text_small"></TextView>
 
             </LinearLayout>
@@ -351,7 +354,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/padding_small"
-                    android:textColor="@color/light_color"
+                    android:lineSpacingMultiplier="1.3"
+                    android:textColor="@color/main_color"
                     android:textSize="@dimen/text_small"></TextView>
 
             </LinearLayout>
