--- a/common/src/main/res/drawable/choose_first_level_item_selector.xml
+++ b/common/src/main/res/drawable/choose_first_level_item_selector.xml
@@ -1,19 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape
-            >
-            <solid
-                android:color="@color/window_background"
-                />
-        </shape>
+    <item android:drawable="@drawable/f1" android:state_pressed="true">
     </item>
-    <item>
-        <shape
-            >
-            <solid
-                android:color="@color/white"
-                />
-        </shape>
+    <item android:drawable="@drawable/f2">
     </item>
 </selector>
