--- a/common/src/main/res/layout/v_multi_iconmenu_choose_item.xml
+++ b/common/src/main/res/layout/v_multi_iconmenu_choose_item.xml
@@ -1,22 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/expand_tab_item_height"
-    android:orientation="horizontal">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/img"
         android:layout_width="20dip"
         android:layout_height="20dip"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_launcher"/>
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/content"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/expand_tab_item_height"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
-        android:textColor="@color/window_background"
-        android:textSize="@dimen/font_size_14" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/expand_tab_item_height"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:textColor="@color/window_background"
+            android:textSize="@dimen/font_size_14"/>
+
+        <TextView
+            android:id="@+id/select_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dip"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:textColor="@color/light_color"
+            android:textSize="@dimen/text_litter"/>
+    </LinearLayout>
 </LinearLayout>
