--- a/common/src/main/res/layout/activity_update_password.xml
+++ b/common/src/main/res/layout/activity_update_password.xml
@@ -24,22 +24,53 @@
             listitem:hint="请输入原密码"
             listitem:inputtype="password"/>
 
-        <cn.goodjobs.common.view.searchItem.InputItemView
-            android:id="@+id/itemNewPass"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            listitem:tvtitle="新密码"
-            listitem:hint="请输入不少于8位"
-            listitem:inputtype="password"/>
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <cn.goodjobs.common.view.searchItem.InputItemView
+                android:id="@+id/itemNewPass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                listitem:tvtitle="新密码"
+                listitem:hint="请输入不少于8位"
+                listitem:inputtype="email"
+                listitem:showLine="false"/>
 
-        <cn.goodjobs.common.view.searchItem.InputItemView
-            android:id="@+id/itemNewPassAgain"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            listitem:tvtitle="确认新密码"
-            listitem:hint="请再输入一次新密码"
-            listitem:inputtype="password"
-            listitem:showLine="false"/>
+            <RadioGroup
+                android:id="@+id/radioGroup"
+                android:layout_width="80dip"
+                android:layout_height="36dip"
+                android:checkedButton="@+id/radio1"
+                android:orientation="horizontal"
+                android:layout_marginRight="@dimen/padding_small"
+                android:background="@drawable/radio_blue_bg">
+                <RadioButton
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="..."
+                    android:textSize="@dimen/text_small"
+                    android:textColor="@drawable/radio_text"
+                    android:gravity="center"
+                    android:id="@+id/radio0"
+                    android:background="@drawable/radio_left_bg"
+                    android:button="@null"/>
+                <RadioButton
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="abc"
+                    android:textSize="@dimen/text_small"
+                    android:textColor="@drawable/radio_text"
+                    android:gravity="center"
+                    android:id="@+id/radio1"
+                    android:background="@drawable/radio_right_bg"
+                    android:button="@null"/>
+            </RadioGroup>
+        </LinearLayout>
         <View style="@style/line"/>
 
     </LinearLayout>
