--- a/common/src/main/res/layout/item_personal_collection.xml
+++ b/common/src/main/res/layout/item_personal_collection.xml
@@ -63,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:textSize="@dimen/text_small"
-                    android:textColor="@drawable/readstatus_text"
+                    android:textColor="@color/light_color"
                     android:text="公司"/>
             </LinearLayout>
             <LinearLayout
@@ -76,7 +76,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="10sp"
-                    android:textColor="@drawable/readstatus_text"
+                    android:textColor="@drawable/readstatus_text1"
                     android:layout_marginRight="@dimen/padding_small"
                     android:text="已求职"
                     android:paddingLeft="8dip"
