--- a/bluecollar/src/main/res/layout/item_trend_top.xml
+++ b/bluecollar/src/main/res/layout/item_trend_top.xml
@@ -53,6 +53,14 @@
                     android:drawableLeft="@mipmap/img_distance"
                     android:gravity="center_vertical"
                     android:text="55m"/>
+                <ImageButton
+                    android:id="@+id/btnDel"
+                    android:layout_width="40dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/icon_del"
+                    android:scaleType="fitEnd"
+                    android:visibility="gone"
+                    android:background="@color/transparent"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
