--- a/bluecollar/src/main/res/layout/view_item_trend.xml
+++ b/bluecollar/src/main/res/layout/view_item_trend.xml
@@ -75,10 +75,14 @@
             android:textColor="@color/light_color"
             android:text="30分钟前"/>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dip"
+                android:layout_weight="1"/>
             <ImageView
                 android:layout_width="24dip"
                 android:layout_height="15dip"
@@ -86,21 +90,26 @@
                 android:scaleType="fitCenter"/>
             <TextView
                 android:id="@+id/tvGuanzhu"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/text_small"
                 android:textColor="@color/light_color"
-                android:layout_marginLeft="2dip"
+                android:maxWidth="36dp"
+                android:singleLine="true"
                 android:text="100"/>
         </LinearLayout>
         <LinearLayout
             android:id="@+id/btnZan"
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:clickable="true"
             android:layout_marginLeft="@dimen/padding_small"
             android:orientation="horizontal">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dip"
+                android:layout_weight="1"/>
             <ImageView
                 android:layout_width="18dip"
                 android:layout_height="16dip"
@@ -108,19 +117,24 @@
                 android:scaleType="fitCenter"/>
             <TextView
                 android:id="@+id/tvFans"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/text_small"
+                android:maxWidth="42dp"
+                android:singleLine="true"
                 android:textColor="@color/light_color"
-                android:layout_marginLeft="2dip"
                 android:text="100"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:layout_marginLeft="@dimen/padding_small"
             android:orientation="horizontal">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dip"
+                android:layout_weight="1"/>
             <ImageView
                 android:layout_width="19dip"
                 android:layout_height="17dip"
@@ -128,12 +142,13 @@
                 android:scaleType="fitCenter"/>
             <TextView
                 android:id="@+id/tvMsg"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/text_small"
                 android:textColor="@color/light_color"
-                android:layout_marginLeft="2dip"
-                android:text="100"/>
+                android:maxWidth="41dp"
+                android:singleLine="true"
+                android:text="1000"/>
         </LinearLayout>
     </LinearLayout>
     <View style="@style/line"/>
