--- a/headhuntingjob/src/main/res/layout/activity_rewarddetails.xml
+++ b/headhuntingjob/src/main/res/layout/activity_rewarddetails.xml
@@ -1,131 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/bg_color">
 
-    <include layout="@layout/actionbar" />
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <include layout="@layout/actionbar" />
 
-        <LinearLayout
-            android:id="@+id/ll_bottom"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
-            <RelativeLayout
-                android:id="@+id/rl_share"
+            <LinearLayout
+                android:id="@+id/ll_bottom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/padding_default"
-                android:layout_marginRight="@dimen/padding_default"
-                android:layout_weight="2">
+                android:layout_alignParentBottom="true"
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/iv_share"
-                    android:layout_width="25dip"
-                    android:layout_height="25dip"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="@dimen/padding_small"
-                    android:background="@drawable/icon_share" />
-
-                <TextView
-                    android:id="@+id/tv_share"
-                    android:layout_width="wrap_content"
+                <RelativeLayout
+                    android:id="@+id/rl_share"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/iv_share"
-                    android:layout_centerHorizontal="true"
-                    android:paddingBottom="2dip"
-                    android:paddingTop="2dip"
-                    android:text="分享"
-                    android:textColor="@color/topbar_bg"
-                    android:textSize="@dimen/text_default" />
+                    android:layout_marginLeft="@dimen/padding_default"
+                    android:layout_marginRight="@dimen/padding_default"
+                    android:layout_weight="2">
 
-            </RelativeLayout>
+                    <ImageView
+                        android:id="@+id/iv_share"
+                        android:layout_width="25dip"
+                        android:layout_height="25dip"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="@dimen/padding_small"
+                        android:background="@drawable/icon_share" />
 
-            <RelativeLayout
+                    <TextView
+                        android:id="@+id/tv_share"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/iv_share"
+                        android:layout_centerHorizontal="true"
+                        android:paddingBottom="2dip"
+                        android:paddingTop="2dip"
+                        android:text="分享"
+                        android:textColor="@color/topbar_bg"
+                        android:textSize="@dimen/text_default" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <Button
+                        android:id="@+id/btn_apply"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:background="@drawable/button_bg"
+                        android:paddingBottom="@dimen/padding_small"
+                        android:paddingLeft="@dimen/padding_default"
+                        android:paddingRight="@dimen/padding_default"
+                        android:paddingTop="@dimen/padding_small"
+                        android:text="申请职位"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/text_default" />
+
+                    <Button
+                        android:id="@+id/btn_recommend"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/padding_default"
+                        android:background="@drawable/button_bg_yellow"
+                        android:paddingBottom="@dimen/padding_small"
+                        android:paddingLeft="@dimen/padding_default"
+                        android:paddingRight="@dimen/padding_default"
+                        android:paddingTop="@dimen/padding_small"
+                        android:text="推荐人才"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/text_default" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/rl_collect"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2">
+
+                    <ImageView
+                        android:id="@+id/iv_collect"
+                        android:layout_width="25dip"
+                        android:layout_height="25dip"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="@dimen/padding_small"
+                        android:background="@drawable/icon_collect" />
+
+                    <TextView
+                        android:id="@+id/tv_collect"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/iv_collect"
+                        android:layout_centerHorizontal="true"
+                        android:paddingBottom="2dip"
+                        android:paddingTop="2dip"
+                        android:text="收藏"
+                        android:textColor="@color/topbar_bg"
+                        android:textSize="@dimen/text_default" />
+
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
+            <View
+                android:id="@+id/view_line"
+                style="@style/line"
+                android:layout_above="@id/ll_bottom" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vp_headdetails"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_above="@id/view_line" />
 
-                <Button
-                    android:id="@+id/btn_apply"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/button_bg"
-                    android:paddingBottom="@dimen/padding_small"
-                    android:paddingLeft="@dimen/padding_default"
-                    android:paddingRight="@dimen/padding_default"
-                    android:paddingTop="@dimen/padding_small"
-                    android:text="申请职位"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/text_default" />
+        </RelativeLayout>
+    </LinearLayout>
 
-                <Button
-                    android:id="@+id/btn_recommend"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/padding_default"
-                    android:background="@drawable/button_bg_yellow"
-                    android:paddingBottom="@dimen/padding_small"
-                    android:paddingLeft="@dimen/padding_default"
-                    android:paddingRight="@dimen/padding_default"
-                    android:paddingTop="@dimen/padding_small"
-                    android:text="推荐人才"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/text_default" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/rl_collect"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2">
-
-                <ImageView
-                    android:id="@+id/iv_collect"
-                    android:layout_width="25dip"
-                    android:layout_height="25dip"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="@dimen/padding_small"
-                    android:background="@drawable/icon_collect" />
-
-                <TextView
-                    android:id="@+id/tv_collect"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/iv_collect"
-                    android:layout_centerHorizontal="true"
-                    android:paddingBottom="2dip"
-                    android:paddingTop="2dip"
-                    android:text="收藏"
-                    android:textColor="@color/topbar_bg"
-                    android:textSize="@dimen/text_default" />
-
-            </RelativeLayout>
-
-
-        </LinearLayout>
-
-        <View
-            android:id="@+id/view_line"
-            style="@style/line"
-            android:layout_above="@id/ll_bottom" />
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/vp_headdetails"
+    <RelativeLayout
+        android:id="@+id/tipLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#aa000000"
+        android:clickable="true"
+        android:onClick="hideTip"
+        android:visibility="invisible">
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/view_line" />
-
+            android:layout_height="220dip"
+            android:src="@drawable/tip_zouy"
+            android:scaleType="fitCenter"
+            android:layout_centerInParent="true"/>
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
