修改地图为高德地图

--- a/bluecollar/src/main/res/layout/fragment_blue_home.xml
+++ b/bluecollar/src/main/res/layout/fragment_blue_home.xml
@@ -79,6 +79,7 @@
                     android:layout_marginTop="@dimen/padding_small"
                     android:background="@color/white"
                     android:orientation="horizontal"
+                    android:paddingTop="@dimen/padding_small"
                     android:visibility="gone">
 
                 </LinearLayout>
@@ -89,7 +90,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:orientation="horizontal"
-                    android:paddingBottom="@dimen/padding_default"
+                    android:paddingBottom="@dimen/padding_small"
                     android:visibility="gone"></LinearLayout>
 
                 <TextView
