--- a/common/src/main/res/layout/activity_map.xml
+++ b/common/src/main/res/layout/activity_map.xml
@@ -7,7 +7,7 @@
     <include
         layout="@layout/actionbar"/>
 
-    <com.baidu.mapapi.map.MapView
+    <com.amap.api.maps2d.MapView
         android:id="@+id/map"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"/>
